manifests/traefik/traefik-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: traefik-test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-test
                port:
                  number: 80
